# sha1_v2

./: .gitignore  CMakeLists.txt  README.md  README.org  sha1.cpp
include/sha1/: sha1.hpp
performace_data/: line_dataset_sha1_linux_command_251130063403.js  line_dataset_sha1_new_251203060651.js  line_dataset_sha1_new_mmap_251202142628.js  line_dataset_sha1_new_w_fread_251202141142.js  line_dataset_sha1_original_251202141254.js  line_dataset_sha1_original_251203060642.js  readme.txt
performance_tests/: CMakeLists.txt  file_test_library.cpp  file_test_new_header_only.cpp  file_test_old.cpp  sha1_new_header_only.hpp  sha1_old_header_only.hpp  sha1_performance
test/: CMakeLists.txt
tests/: CMakeLists.txt  big_file_test.cpp  test_sha1.cpp
